fb adding some trouble to simple.html

--- a/simple.html
+++ b/simple.html
@@ -3,8 +3,7 @@
 	Copyright 2014 Git.training
 	Silly changes from master branch
  -->
-<head>
-	<title>Silly changes on Master</title>
+<head>Lots of Trouble</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,8 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just stuff for now,
-			Not sure if we should replace this
+			Just some content
 		</p>
 	</main>
 	<footer class="container">
