--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!-- 
 	Copyright 2014 Git.training
-	Adding changes before rebasing conflics
+	Silly changes from master branch
  -->
 <head>
-	<title>Very Respectful Website</title>
+	<title>Silly changes on Master</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +18,8 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just stuff for now,
+			Not sure if we should replace this
 		</p>
 	</main>
 	<footer class="container">
