--- a/simple.html
+++ b/simple.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <!-- 
 	Copyright 2014 Git.training
-	Silly changes from master branch
+	
  -->
-<head>Lots of Trouble</title>
+<head>Lots of Trouble, in a little repo</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
