done with simple.html updates

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2014 Git.training
 	
  -->
-<head>Lots of Trouble, in a little repo</title>
+<head>Updating title for stash example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			More changes
 		</p>
 	</main>
 	<footer class="container">
