--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2014 Git.training
 	
  -->
-<head>Updating title for stash branch example</title>
+<head>Updating title for tagging example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
